fix alignment in Question box

--- a/style.css
+++ b/style.css
@@ -50,23 +50,21 @@ div.content {
 #Question {
     color: var(--accent-color);
     font-weight: bold;
-    position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
     background-color: oklch(from var(--bg-color) l c h / .8);
     border-radius: 20px 20px 0 0;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    height: 2.5em;
     font-size: larger;
+    padding: .5em;
 }
 
 #Answers {
     margin: 10px;
-    margin-top: 4em;
+    margin-top: 1em;
     list-style-type: none;
     li {
         margin-top: .8em;
